# kernelbench.com

./: .gitignore  AGENTS.md  CLAUDE.md  DEVLOG.md  README.md  SPEC.md  X-gpt56-sol-vs-grok45-draft.md  bench.py  justfile  next.config.mjs  package-lock.json  package.json
benchmarks/cuda/: DEVLOG.md  README.md  SPEC.md  pyproject.toml
benchmarks/cuda/problems-rtxpro6000/01_glm52_fused_moe/: PROMPT.txt  benchmark.py  check.py  problem.yaml  reference.py  shapes.py  sota.py
benchmarks/cuda/problems-rtxpro6000/02_deepseek_nsa/: PROMPT.txt  benchmark.py  check.py  problem.yaml  reference.py  shapes.py  sota.py
benchmarks/cuda/problems-rtxpro6000/03_megaqwen_decode/: BASELINE.md  PROMPT.txt  benchmark.py  check.py  problem.yaml  reference.py  shapes.py  sota.py
benchmarks/cuda/problems-rtxpro6000/04_grid_mingru_sps/: PROMPT.txt  benchmark.py  check.py  problem.yaml  reference.py  sota.py
benchmarks/cuda/rebench-scratch/audit_090648/: check.py  cuda_language.json  framework.txt  reference.py  solution.py
benchmarks/cuda/rebench-scratch/grok45/: shapes.py  solution.py
benchmarks/cuda/rebench-scratch/k3_1m/: solution.py
benchmarks/cuda/rebench-scratch/k3_256k_r2/: solution.py
benchmarks/cuda/rebench-scratch/opus48/: solution.py
benchmarks/cuda/results/: b200_peak_validation.json  leaderboard.b200.json  leaderboard.json  leaderboard_v2.json  published_runs.json
benchmarks/cuda/results/annotations/: 20260715_184348_grok_grok-4.5_01_rmsnorm_residual.yaml  20260715_184350_grok_grok-4.5_02_online_softmax.yaml  20260715_184352_grok_grok-4.5_03_grid_mingru_sps.yaml  20260715_212751_grok_grok-4.5_01_glm52_fused_moe.yaml  20260715_212751_grok_grok-4.5_02_deepseek_nsa.yaml  20260715_212751_grok_grok-4.5_03_megaqwen_decode.yaml  20260715_212751_grok_grok-4.5_04_grid_mingru_sps.yaml  20260716_011941_grok_grok-4.5_04_grid_mingru_sps.yaml  20260716_090533_kinetic-claude_kinetic-0715_01_glm52_fused_moe.yaml  20260716_090648_kinetic-claude_kinetic-0715_04_grid_mingru_sps.yaml  20260716_112833_kinetic-claude_kinetic-0715_01_glm52_fused_moe.yaml  20260716_112858_kinetic-claude_kinetic-0715_02_deepseek_nsa.yaml  20260716_112923_kinetic-claude_kinetic-0715_03_megaqwen_decode.yaml  20260716_112948_kinetic-claude_kinetic-0715_04_grid_mingru_sps.yaml  20260716_140633_claude_claude-opus-4-8_01_glm52_fused_moe.yaml  20260716_140658_claude_claude-opus-4-8_02_deepseek_nsa.yaml  20260716_140723_claude_claude-opus-4-8_03_megaqwen_decode.yaml  20260716_140748_claude_claude-opus-4-8_04_grid_mingru_sps.yaml  20260716_150051_kinetic-claude_kinetic-0715_1m__01_glm52_fused_moe.yaml  20260716_150116_kinetic-claude_kinetic-0715_1m__02_deepseek_nsa.yaml  20260716_150141_kinetic-claude_kinetic-0715_1m__03_megaqwen_decode.yaml  20260716_150206_kinetic-claude_kinetic-0715_1m__04_grid_mingru_sps.yaml  20260718_232940_kinetic-claude_kinetic-0715_1m__03_megaqwen_decode.yaml  (+21 more)
benchmarks/cuda/scripts/: build_all_gpus.sh  build_v2_leaderboard.py  ccr-rust.config.json  classify_run.py  inject_tokens.py  publish_v2.sh  run_baselines.sh  run_hard.sh  sweep.sh  sweep_3090.sh  sweep_completion.sh  sweep_fp8.sh
benchmarks/cuda/tests/: test_cuda_language.py  test_harness_script.py  test_numeric_stress.py
benchmarks/hard/: .cursorrules  AGENTS.md  CLAUDE.md  DEVLOG.md  LEADERBOARD.md  README.md  SPEC.md  overnight-results.md  pyproject.toml
benchmarks/hard/results/: leaderboard.b200.json  leaderboard.fresh-preview.json  leaderboard.h100.json  leaderboard.json  leaderboard.rtx3090.json  leaderboard_v1.json  leaderboard_v2.b200.json  leaderboard_v2.h100.json  leaderboard_v2.json  opus46_20260604_summary.json  problem_baselines.b200.json  problem_baselines.h100.json  problem_baselines.json  published_runs.json
benchmarks/hard/scripts/: build_all_gpus.sh  build_v2_leaderboard.py  campaign_reliable.spec  check_sweep_health.py  emit_board_solutions.py  extract_usage.py  generate_blog_plots.py  h100_box_setup.sh  inject_tokens.py  launch_infra_retries.sh  launch_parallel_sweep.sh  nvcf_openai_proxy.py  overnight_sweep.sh  preflight_harnesses.sh  probe_opencode_multistep.sh  publish_v2.sh  rerun_zai_claude_glm51.sh  resume_overnight.sh  resweep_deck.sh  reward_hack_lint.py  run_baselines.sh  run_hard.sh  setup_problem.py  shakedown_sweep.sh  sweep.sh  sweep_09_10.sh  sweep_campaign.sh  sweep_deck.sh  sweep_fp8.sh  topk_overnight.sh  traces_to_hf.py  warm_opencode_home.sh
benchmarks/hard/src/: __init__.py
benchmarks/hard/tests/: test_eval.py  test_harness_script.py  test_kbh_cli.py
benchmarks/mini/: .gitignore  DEVLOG.md  README.md  SPEC.md  pyproject.toml
benchmarks/mini/scripts/: build_all_gpus.sh  build_v2_leaderboard.py  ccr-lfm.config.json  phase2_launch.sh  preflight_harnesses.sh  publish_v2.sh  reextract_usage.py  resume_overnight.sh  resweep_deck.sh  run_hard.sh  summarize_runs.py  sweep.sh  sweep_deck.sh  sweep_mini.sh  traces_to_hf.py
benchmarks/mini/tests/: test_eval.py  test_harness_script.py  test_kbh_cli.py  test_numeric_stress.py  test_redaction.py  test_viewer_grok.py
benchmarks/multi/: .gitignore  DEVLOG.md  NOTICE  README.md  SPEC.md  pyproject.toml
benchmarks/multi/scripts/: nccl_ceiling.py  numerics_probe.py  remote_ceiling.sh  run_agent.sh
benchmarks/v3/: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
benchmarks/v3/docs/: rewardhack_cases.md  v4_novel_ops_briefs.md  v4_rtx3090_spec.md
benchmarks/v3/scripts/: aggregate_results.py  run_harness.sh  setup_workspace.py
benchmarks/v3/src/: api.py  batch.py  prompts.py
benchmarks/v3/tests/: test_hardware_targets.py
benchmarks/v3/tools/: aggregate_results.py
environments/kernel_hard/: README.md  kernel_hard.py  kernel_native_harness.py  pyproject.toml
environments/kernel_v3/: README.md  kernel_v3.py  pyproject.toml
environments/kernelbench_decode/: .gitignore  HANDOFF.md  README.md  TODO.md  kernelbench_decode.py  pyproject.toml
environments/kernelbench_decode/problem/: sota.py
kbtool/: pyproject.toml
kbtool/kb/: __init__.py  __main__.py  cli.py  contamination.py
kbtool/tests/: test_contamination.py
(+3469 files in other folders)
