[project]
name = "kbtool"
version = "0.1.0"
description = "kb — KernelBench operator CLI for the kernelbench.com monorepo"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.25",
    "pyyaml>=6",
]

[project.scripts]
kb = "kb.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kb"]
