[project]
name = "kernelbench-mini"
version = "0.1.0"
description = "KernelBench-Mini: capped 30-min, 5-repeat small-model kernel bench on H100. Fresh 4-problem deck; 2 Triton-allowed, 2 CUDA-only."
requires-python = ">=3.11"
dependencies = [
    "torch>=2.11",
    "ninja>=1.11",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "rich>=13.7",
    "matplotlib>=3.9",
    "pytest>=8.0",
    "ruff>=0.6",
    "einops>=0.8.2",
    "requests<2.33",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
kbh = "src.kbh.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
# The problem deck is the frozen eval surface (never lint-modified), so it is
# excluded from ruff like hard's deck is de facto.
exclude = ["problems-h100", "problems-rtxpro6000"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
