[project]
name = "kernelbench-multi"
version = "0.1.0"
description = "KernelBench-Multi: can LLMs write fast multi-GPU (NVLink) collective kernels?"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "pyyaml",
]

[tool.uv]
# torch is installed against the node's CUDA wheels; pin in uv.lock on the H100 node.

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
