[project]
name = "kernel-hard"
version = "0.1.0"
description = "RL environment wrapping the native KernelBench-Hard agentic harness (~10 operation-level hard CUDA kernels; multi-turn write/check/benchmark flywheel; mechanical pct-of-roofline reward, correctness hard-gate, opt-in judge veto)."
tags = ["gpu", "cuda", "triton", "multi-turn", "tool-use", "agentic", "sandbox", "coding", "kernel", "rl"]
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.14",
    "datasets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# TODO(vendoring): for Hub publishing, also vendor benchmarks/hard's src/ and
# problems/ (+ pyproject/uv.lock) into this dir and list them here.
include = ["kernel_hard.py", "kernel_native_harness.py"]

[tool.verifiers.eval]
num_examples = 2
rollouts_per_example = 1
