[project]
name = "kernel-hard"
version = "0.1.1"
description = "RL environment wrapping the native KernelBench-Hard agentic harness (~10 operation-level hard CUDA kernels; multi-turn write/check/benchmark flywheel; mechanical pct-of-roofline reward, correctness hard-gate, opt-in judge veto). Self-contained: benchmark src + problems vendored under _bench/."
tags = ["gpu", "cuda", "triton", "multi-turn", "tool-use", "agentic", "sandbox", "coding", "kernel", "rl"]
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.14",
    "datasets",
    "torch",
    "numpy",
    "pyyaml",
    "rich",
    "matplotlib",
    "einops",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# Self-contained: ship the env modules + the vendored benchmark (src + problems).
include = ["kernel_hard.py", "kernel_native_harness.py", "_bench/**"]

[tool.hatch.build.targets.wheel]
include = ["kernel_hard.py", "kernel_native_harness.py"]

[tool.hatch.build.targets.wheel.force-include]
"_bench" = "_bench"

[tool.verifiers.eval]
num_examples = 2
rollouts_per_example = 1
