[project]
name = "kernel-v3"
version = "0.1.0"
description = "RL environment wrapping the hardened v3 kernel-benchmark harness (mechanical pct-of-peak reward, correctness hard-gate, opt-in judge veto)."
tags = ["gpu", "cuda", "triton", "single-turn", "sandbox", "coding", "kernel", "rl"]
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.14",
    "datasets",
    "torch",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# TODO(vendoring): for Hub publishing, vendor v3's src/eval, src/agent,
# src/config and problems/ into this dir and list them here.
include = ["kernel_v3.py"]

[tool.verifiers.eval]
num_examples = 3
rollouts_per_example = 2
