[project]
name = "kernel-v3"
version = "0.1.2"
description = "RL environment wrapping the hardened v3 kernel-benchmark harness (mechanical pct-of-peak reward, correctness hard-gate, opt-in judge veto). Self-contained: v3 src + problems vendored under _v3/."
tags = ["gpu", "cuda", "triton", "single-turn", "sandbox", "coding", "kernel", "rl"]
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.14",
    "datasets",
    "torch",
    "filelock",
    "pyyaml",
    "einops",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# Self-contained: ship this module + the vendored v3 harness (src + problems).
include = ["kernel_v3.py", "_v3/**"]

[tool.hatch.build.targets.wheel]
include = ["kernel_v3.py"]

[tool.hatch.build.targets.wheel.force-include]
"_v3" = "_v3"

[tool.verifiers.eval]
num_examples = 3
rollouts_per_example = 2
