[project]
name = "kernelbench-decode"
description = "Sandboxed agentic GPU-kernel optimization: W4A16 Kimi-Linear decode (KernelBench-Mega problem 03). codex in a Prime GPU sandbox; reward = decode speedup over an optimized-PyTorch baseline, correctness-gated. Sandbox isolation closes the cross-run contamination hole."
tags = ["gpu", "kernel", "code", "agentic", "sandbox", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.12",
    "openai>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["kernelbench_decode.py", "pyproject.toml", "problem/**"]

[tool.verifiers.eval]
num_examples = 1
rollouts_per_example = 1
